--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ header{
 .containe_cabecalho{
     display:flex;
     justify-content: space-between;
-    width: 1440px;
+    width: 90%;
+    max-width: 1440px;
     background-color: antiquewhite;
-    margin: 0 auto 0 auto;
+    margin: 0 auto;
     height: 100%;
     align-items: center;
 }
@@ -25,6 +26,9 @@ header{
 
 .box_busca{
 position: relative;
+width: 60%;
+max-width: 500px;
+margin: 0 10px;
 }
 
 .icone_lupa{
@@ -32,16 +36,61 @@ position: relative;
     position: absolute;
     left: 9px;
     top: 9px;
-    fill: #b0b0b0;
 }
 
 .logo{
     height: 60px;
 }
 
-.campu_busca{
-    width: 500px;
+.campo_busca{
+    width: 100%;
     height: 42px;
     border-radius: 10px;
     border: solid 1px #cccccc;
+    padding-left: 2.5rem;
+    font-family: "Bellota", system-ui;
+    font-size: 1rem;
+}
+
+.banner{
+    background-image: url(./Assets/assets/imgs/banner.png);
+    width: 100%;
+    aspect-ratio: 3.2;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.container{
+    width: 90%;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.titulo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 100px 0;
+    background-color: aliceblue;
+}
+
+.titulo span {
+    font-size: 48px;
+}
+
+.titulo hr{
+    width: 300px;
+    height: 4px;
+    border: none;
+    border-radius: 2px;
+    background-color: #ffd188;
+}
+
+.acessivel{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip-path: inset(50%);
+    white-space: nowrap;
 }
