--- a/style.css
+++ b/style.css
@@ -1,58 +1,62 @@
-*{
-  padding:0;
-  margin:0;
-  box-sizing: border-box;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Bellota", system-ui;
 }
 
-header{
+body {
+    background-color: #fff6e8;
+}
+
+header {
     background-color: #ffd188;
     height: 100px;
 }
 
-.containe_cabecalho{
-    display:flex;
+.containe_cabecalho {
+    display: flex;
     justify-content: space-between;
     width: 90%;
     max-width: 1440px;
-    background-color: antiquewhite;
+    /* background-color: aquamarine;  */
     margin: 0 auto;
     height: 100%;
     align-items: center;
 }
 
-.icone_home{
+.icone_home {
     height: 50px;
 }
 
-.box_busca{
-position: relative;
-width: 60%;
-max-width: 500px;
-margin: 0 10px;
+.box_busca {
+    position: relative;
+    width: 60%;
+    max-width: 500px;
+    margin: 0 10px;
 }
 
-.icone_lupa{
+.icone_lupa {
     height: 24px;
     position: absolute;
     left: 9px;
     top: 9px;
 }
 
-.logo{
+.logo {
     height: 60px;
 }
 
-.campo_busca{
+.campo_busca {
     width: 100%;
     height: 42px;
     border-radius: 10px;
     border: solid 1px #cccccc;
     padding-left: 2.5rem;
-    font-family: "Bellota", system-ui;
     font-size: 1rem;
 }
 
-.banner{
+.banner {
     background-image: url(./Assets/assets/imgs/banner.png);
     width: 100%;
     aspect-ratio: 3.2;
@@ -60,25 +64,25 @@ margin: 0 10px;
     background-size: cover;
 }
 
-.container{
+.container {
     width: 90%;
     max-width: 1440px;
     margin: 0 auto;
 }
 
-.titulo{
+.titulo {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 100px 0;
-    background-color: aliceblue;
+    /* background-color: aquamarine;  */
 }
 
 .titulo span {
     font-size: 48px;
 }
 
-.titulo hr{
+.titulo hr {
     width: 300px;
     height: 4px;
     border: none;
@@ -86,11 +90,81 @@ margin: 0 10px;
     background-color: #ffd188;
 }
 
-.acessivel{
+.acessivel {
     position: absolute;
     width: 1px;
     height: 1px;
     overflow: hidden;
     clip-path: inset(50%);
     white-space: nowrap;
+}
+
+
+
+
+/* cards */
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10%;
+    justify-content: center;
+}
+
+.card {
+    width: 350px;
+    height: 500px;
+    background-color: #ffffff;
+    border-radius: 30px;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 10px;
+    margin-bottom: 100px;
+    box-shadow: 0 4px 4px 2px #00000025;
+}
+
+.card img {
+    width: 100%;
+}
+
+.card p,
+.card span {
+    font-size: 18px;
+    width: 90%;
+}
+
+.whatsapp {
+     position: fixed;
+     right: 30px;
+     bottom: 30px;
+     transition: transform 0.5s ease-in-out,
+                 filter 0.5s ease-in-out;
+}
+
+.whatsapp img{
+    filter: drop-shadow(0 5px 1px #00000025);
+}
+
+.whatsapp:hover{
+    transform: scale(1.2);
+    filter: drop-shadow(0 10px 2px #00000025);
+}
+
+
+
+/*rodape*/
+.rodape{
+    width: 100%;
+    height: 60px;
+    background-color: #ffd188;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer p{
+    font-family: "Julius Sans One", sans-serif;
 }
