--- a/Cadastro/style.css
+++ b/Cadastro/style.css
@@ -23,6 +23,7 @@ header {
     margin: 0 auto;
     height: 100%;
     align-items: center;
+    cursor: pointer;
 }
 
 .icone_home {
@@ -65,7 +66,7 @@ header {
     white-space: nowrap;
 }
 
-.containe_cadastro{
+.containe_cadastro {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,28 +86,129 @@ header {
     margin-bottom: 100px;
 }
 
-.box_cadastro{
+.box_cadastro {
     display: flex;
     justify-content: space-between;
     width: 90%;
     max-width: 1440px;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 .cadastro_coluna1 {
-background-color: beige;
-width: 45%;
+    /* background-color: beige; */
+    width: 45%;
 }
 
 .cadastro_coluna2 {
-background-color: antiquewhite;
-width: 45%;
+    /* background-color: antiquewhite; */
+    width: 45%;
 }
 
-.categoria_img{
+.categoria_img {
     display: flex;
+    justify-content: space-between;
 }
 
-.valor_peso{
+.valor_peso {
     display: flex;
+    justify-content: space-between;
+}
+
+.cadastro_coluna2,
+.peso,
+.valor,
+.img,
+.categoria,
+.bolos {
+    display: flex;
+    flex-direction: column;
+}
+
+.box_cadastro label {
+    font-size: 20px;
+}
+
+.box_cadastro input[type="text"],
+.box_cadastro textarea {
+    border-radius: 10px;
+    border: solid 1px #b3b3b3;
+    font-size: 18px;
+    padding: 0 5px;
+}
+
+.box_cadastro input[type="text"] {
+    height: 50px;
+    margin-bottom: 20px;
+}
+
+.categoria {
+    width: 70%;
+}
+
+.box_cadastro textarea {
+    resize: none;
+    height: 200px;
+}
+
+.containe_cadastro input[type="button"] {
+    font-size: 26px;
+    margin: 50PX 0;
+    border-radius: 10px;
+    border: none;
+    background-color: #ffd188;
+    padding: 10px 200px;
+    box-shadow: 0 4px 4px 2px #00000025;
+    cursor: pointer;
+}
+
+.img {
+    width: 20%;
+}
+
+.img svg {
+    width: 30px;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.img div {
+    background-color: #ffffff;
+    border-radius: 10px;
+    border: solid 1px #b3b3b3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    cursor: pointer;
+}
+
+.valor {
+    width: 50%;
+}
+
+.peso {
+    width: 40%;
+}
+
+
+
+
+
+
+/*media*/
+@media screen and (max-width) {
+    .box_cadastro {
+        flex-direction: column;
+    }
+
+    .cadastro_coluna1,
+    .cadastro_coluna2{
+        width: 100%;
+    }
+}
+
+.containe_cadastro input [type="buttin"]{
+    padding: 10px 100px;
 }
